Bug 1323121 - Destroy animations on hidden elements even if the animation has been already finished. r=birtles a=gchang

We have added a test case in bug 1197620 that finished animation with
fill:forwards on hidden elements restarts when the element gets visible, but
it did not catch this bug. We should have added a case without fill:forwards.

MozReview-Commit-ID: 5lfJkO3i9ME

--HG--
extra : source : 962332e7c58ed42ccdb9c34acbb5f40023e48121